# eec-project

./: .gitignore  README.md
characterization/: readme.md
characterization/apps/: readme.md
characterization/apps/failure/: CMakeLists.txt  failure.cpp
characterization/apps/ftlib/: CMakeLists.txt  ft.cpp  ft.h
characterization/apps/ftlib-nng/: CMakeLists.txt  ft.h  nng-simple-ring.cpp
characterization/apps/libonly/: CMakeLists.txt  libonly.cpp
characterization/apps/lulesh/: lulesh-openmpi
characterization/apps/ocftl/: readme.md
characterization/apps/ocftl/failure/: failure.cpp
characterization/apps/ocftl/failure/cmake-defs/: CMakeLists.txt.new  CMakeLists.txt.nng  CMakeLists.txt.std
characterization/apps/ocftl/ftlib/: ft.cpp  ft.h
characterization/apps/ocftl/ftlib-new/: CMakeLists.txt  ft.cpp  ft.h
characterization/apps/ocftl/ftlib-nng/: CMakeLists.txt  ft.cpp
characterization/apps/ocftl/hpccg/: Makefile.new  Makefile.nng  Makefile.std  main.cpp
characterization/apps/ocftl/libonly/: libonly.cpp
characterization/apps/ocftl/libonly/cmake-defs/: CMakeLists.txt.new  CMakeLists.txt.nng  CMakeLists.txt.std
characterization/apps/ocftl/lulesh/: CMakeLists.txt  Makefile.new  Makefile.nng  Makefile.std  lulesh.cc
characterization/apps/ocftl/lulesh/cmake-defs/: CMakeLists.txt.new  CMakeLists.txt.std
characterization/apps/ocftl/miniMD/ref/: Makefile.default  Makefile.new  Makefile.nng  Makefile.std  ljs.cpp
reports/: readme.md  weekly.md
reports/Final Report/: Resultados EEC - Final.xlsx
reports/Update Report/: Resultados EEC.xlsx
resources/: readme.md
resources/ftlib/: CMakeLists.txt  ft.cpp  ft.h
resources/ftlib-new/: ft.cpp  ft.h
resources/ftlib-nng/: app  ft.cpp
tools/: parse.sh  parselog.cpp  parseout.cpp  readme.md
